--- a/AulasAvancadas/.classpath
+++ b/AulasAvancadas/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="lib/poi-5.2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
